# risq-android

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  build.gradle  install.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/risq/android/risq/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/graphql/risq/android/graphql/: Markets.graphql  OpenOffers.graphql  schema.json
app/src/main/java/risq/android/: Constants.kt  OpenOffer.kt  OpenOfferAdapter.kt  OpenOffersViewModel.kt  RisqDaemonService.kt  RisqMainActivity.kt  RisqWrapper.kt  TorService.kt
app/src/main/java/risq/android/risq/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  open_offer_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/risq/android/risq/: ExampleUnitTest.kt
ci/: pipeline.yml  release_notes.md  repipe  settings.yml
ci/ci_image/: Dockerfile
ci/tasks/: build-release.sh  github-release.sh  prepare-repo.sh  run-tests.sh  set-dev-version.sh
gradle/wrapper/: gradle-wrapper.properties
rust/glue/: Cargo.toml
rust/glue/src/: lib.rs
rust/risq-glue/: Cargo.toml
rust/risq-glue/src/: lib.rs
scripts/: refresh-glue.sh
