[package]
name = "rust"
version = "0.1.0"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# risq = { path = "../risq" }
jni = { version = "0.10.2", default-features = false }

[profile.release]
lto = true

[lib]
name = "rust"
crate-type = ["cdylib"]
