[package]
name = "risq-glue"
version = "0.1.0"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }

[dependencies.risq]
path = "../risq"
features = ["vendored-openssl"]

[profile.release]
lto = true

[lib]
name = "risq_glue"
crate-type = ["cdylib"]
